    * Remove the "File" menu. We have no files, we have tasks!    
    * Patch from mrk to improve compatibility with non GNU systems
    * Close date selector widget on single click
    * Empty new tasks are deleted when editor is closed
    * lot of bug fixed in the editor while playing with subtasks
    * Works well with the "text besides icon" GNOME option
    * Merge RTM plugin branch from Luca Invernizzi
    * i18n: fixed window title in GTG/taskbrowser/browser.py, by Dario Bertini 
    * Patch from Luca Invernizzi to add XDG_CACHE redefinition in script/debug.sh
    * Patch from Luca Invernizzi to remove unsued get_closed_date
    * Added filtering capabilities by Paulo Cabido
      - Filter callbacks were added to the task browser
      - Filters were also added to the requester 
    * Fixed #406851, incorrect behaviour marking a dismissed task as done by Patrick Coleman
    * Added accelerators to the task editor by Patrick Coleman
    * Add plugin engine by Paulo Cabido
    * When GTG is already running, use DBUS to raise existing instance rather than failing silently
    * Refactorization and PEP8ification work by Jonathan Lange
    * New keyboard bindings for 'Mark as done' and 'Dismiss' actions
    * New keyboard bindings and accelerators by Jonathan Lange
    * DBus interface by Ryan Paul
    * Remove the 'Delete' button from the toolbar by Jonathan Lange
    * Fix a spelling mistake in the manpage by Jonathan Lange
    * Allow quickadd of capitalized date by remy@frerebeau.org 

2009-07-04 Getting Things GNOME! 0.1.2
    * Available in 18 languages, with 12 languages being more than 99% translated
    * Shadows around the listview widgets, by Jean-François Fortin Tam  
    * Fixes package dependencies
    * Tooltips for button
    * Automatically select title in task editor
    * Crash on startup with non empty LANGUAGE envvar
    * Use GNOME settings for toolbar, by Anton Rebguns
    * Better tag markup handling
    * No more multiple instances