@@ -1,3 +1,4 @@
+    * Opened tasks on quit are reopened on start
     * Remove the "File" menu. We have no files, we have tasks!    
     * Patch from mrk to improve compatibility with non GNU systems
     * Close date selector widget on single click
